:card_file_box: refactors DB to hold restrictions imposed by the client
