# docs/swagger.yaml
@@ -40,12 +40,14 @@ definitions:
         type: string
       id:
         $ref: '#/definitions/sql.NullInt64'
-      limite:
+      limite_links_mensal:
+        $ref: '#/definitions/sql.NullInt64'
+      limite_redirecionadores_mensal:
         $ref: '#/definitions/sql.NullInt64'
       nome:
         $ref: '#/definitions/sql.NullString'
-      periodo_limite:
-        $ref: '#/definitions/sql.NullString'
+      ordenacao_aleatoria_links:
+        $ref: '#/definitions/sql.NullBool'
       removido_em:
         type: integer
       rowid:
@@ -86,8 +88,6 @@ definitions:
     properties:
       atualizado_em:
         $ref: '#/definitions/sql.NullString'
-      autenticado:
-        $ref: '#/definitions/sql.NullBool'
       bitmask:
         type: integer
       cpf:
@@ -114,6 +114,33 @@ definitions:
         type: integer
       senha:
         $ref: '#/definitions/sql.NullString'
+      versao:
+        type: integer
+    type: object
+  HistoricoUsuarioTemporario:
+    properties:
+      bitmask:
+        type: integer
+      cpf:
+        $ref: '#/definitions/sql.NullString'
+      criado_em:
+        $ref: '#/definitions/sql.NullString'
+      criado_em_:
+        type: string
+      email:
+        $ref: '#/definitions/sql.NullString'
+      id:
+        $ref: '#/definitions/sql.NullInt64'
+      nome:
+        $ref: '#/definitions/sql.NullString'
+      nome_de_usuario:
+        $ref: '#/definitions/sql.NullString'
+      plano_de_assinatura:
+        $ref: '#/definitions/sql.NullInt64'
+      removido_em:
+        type: string
+      rowid:
+        type: integer
       versao:
         type: integer
     type: object
@@ -144,16 +171,23 @@ definitions:
         type: string
       id:
         type: integer
-      limite:
+      limite_links_mensal:
+        type: integer
+      limite_redirecionamentos_mensal:
         type: integer
       nome:
         type: string
-      periodo_limite:
-        type: string
+      ordenacao_aleatoria_links:
+        type: boolean
       removido_em:
         type: integer
       valor_mensal:
         type: integer
+    type: object
+  Produto:
+    properties:
+      name:
+        type: string
     type: object
   Redirecionador:
     properties:
@@ -178,8 +212,6 @@ definitions:
     properties:
       atualizado_em:
         type: string
-      autenticado:
-        type: boolean
       cpf:
         type: string
       criado_em:
@@ -297,6 +329,24 @@ paths:
         required: true
         schema:
           type: integer
+      - description: Limite de Links Mensal
+        in: body
+        name: limite_links_mensal
+        required: true
+        schema:
+          type: integer
+      - description: Limite de Redirecionamentos Mensal
+        in: body
+        name: limite_redirecionamentos_mensal
+        required: true
+        schema:
+          type: integer
+      - description: Ordenação Aleatória de Links
+        in: body
+        name: ordenacao_aleatoria_links
+        required: true
+        schema:
+          type: boolean
       produces:
       - application/json
       responses:
@@ -393,6 +443,22 @@ paths:
         name: valor_mensal
         schema:
           type: integer
+      - description: Limite de Links Mensal
+        in: body
+        name: limite_links_mensal
+        schema:
+          type: integer
+      - description: Limite de Redirecionamentos Mensal
+        in: body
+        name: limite_redirecionamentos_mensal
+        schema:
+          type: integer
+      - description: Ordenação Aleatória de Links
+        in: body
+        name: ordenacao_aleatoria_links
+        required: true
+        schema:
+          type: boolean
       produces:
       - application/json
       responses:
@@ -916,7 +982,7 @@ paths:
         name: plano_de_assinatura
         required: true
         schema:
-          type: integer
+          type: string
       produces:
       - application/json
       responses:
@@ -1098,6 +1164,18 @@ paths:
         name: valor
         required: true
         type: string
+      - description: Senha
+        in: body
+        name: senha
+        required: true
+        schema:
+          type: string
+      - description: Data de Nascimento
+        in: body
+        name: data_de_nascimento
+        required: true
+        schema:
+          type: string
       produces:
       - application/json
       responses:
@@ -1147,14 +1225,10 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Nome de Usuário
-        in: body
-        name: nome_de_usuario
-        schema:
-          type: string
       - description: Email
         in: body
         name: email
+        required: true
         schema:
           type: string
       - description: Senha
@@ -1219,4 +1293,79 @@ paths:
       summary: Troca a senha de um usuário
       tags:
       - Usuários
+  /v1/api/usuarios_temporarios:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: CPF
+        in: body
+        name: customer.document
+        required: true
+        schema:
+          type: string
+      - description: Nome
+        in: body
+        name: customer.name
+        required: true
+        schema:
+          type: string
+      - description: Email
+        in: body
+        name: customer.email
+        required: true
+        schema:
+          type: string
+      - description: Plano de Assinatura
+        in: body
+        name: products
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/Produto'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Erro'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Erro'
+      summary: Cria um usuário temporário
+      tags:
+      - UsuáriosTemporários
+  /v1/api/usuarios_temporarios/historico:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/HistoricoUsuarioTemporario'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Erro'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Erro'
+      summary: Retorna o histórico de ações relativas a usuários temporários no sistema
+      tags:
+      - Histórico
 swagger: "2.0"
