# internal/models/historico.go
@@ -3,19 +3,35 @@ package models
 import "database/sql"
 
 type HistoricoPlanoDeAssinatura struct {
-	RowId         int64          `json:"rowid"`
-	Id            sql.NullInt64  `json:"id"`
-	Nome          sql.NullString `json:"nome"`
-	ValorMensal   sql.NullInt64  `json:"valor_mensal"`
-	Limite        sql.NullInt64  `json:"limite"`
-	PeriodoLimite sql.NullString `json:"periodo_limite"`
-	CriadoEm      sql.NullString `json:"criado_em"`
-	AtualizadoEm  sql.NullString `json:"atualizado_em"`
-	RemovidoEm    sql.NullString `json:"removido_em" swaggertype:"integer"`
-	Versao        int64          `json:"versao"`
-	Bitmask       int64          `json:"bitmask"`
-	CriadoEm_     string         `json:"criado_em_"`
+	RowId                        int64          `json:"rowid"`
+	Id                           sql.NullInt64  `json:"id"`
+	Nome                         sql.NullString `json:"nome"`
+	ValorMensal                  sql.NullInt64  `json:"valor_mensal"`
+	LimiteLinksMensal            sql.NullInt64  `json:"limite_links_mensal"`
+	LimiteRedirecionadoresMensal sql.NullInt64  `json:"limite_redirecionadores_mensal"`
+	OrdenacaoAleatoriaLinks      sql.NullBool   `json:"ordenacao_aleatoria_links"`
+	CriadoEm                     sql.NullString `json:"criado_em"`
+	AtualizadoEm                 sql.NullString `json:"atualizado_em"`
+	RemovidoEm                   sql.NullString `json:"removido_em" swaggertype:"integer"`
+	Versao                       int64          `json:"versao"`
+	Bitmask                      int64          `json:"bitmask"`
+	CriadoEm_                    string         `json:"criado_em_"`
 } // @name HistoricoPlanoDeAssinatura
+
+type HistoricoUsuarioTemporario struct {
+	RowId             int64          `json:"rowid"`
+	Id                sql.NullInt64  `json:"id"`
+	Cpf               sql.NullString `json:"cpf"`
+	Nome              sql.NullString `json:"nome"`
+	NomeDeUsuario     sql.NullString `json:"nome_de_usuario"`
+	Email             sql.NullString `json:"email"`
+	PlanoDeAssinatura sql.NullInt64  `json:"plano_de_assinatura"`
+	CriadoEm          sql.NullString `json:"criado_em"`
+	RemovidoEm        sql.NullString `json:"removido_em" swaggertype:"string"`
+	Versao            int64          `json:"versao"`
+	Bitmask           int64          `json:"bitmask"`
+	CriadoEm_         string         `json:"criado_em_"`
+} // @name HistoricoUsuarioTemporario
 
 type HistoricoUsuario struct {
 	RowId             int64          `json:"rowid"`
@@ -26,7 +42,6 @@ type HistoricoUsuario struct {
 	Email             sql.NullString `json:"email"`
 	Senha             sql.NullString `json:"senha"`
 	DataDeNascimento  sql.NullString `json:"data_de_nascimento"`
-	Autenticado       sql.NullBool   `json:"autenticado"`
 	PlanoDeAssinatura sql.NullInt64  `json:"plano_de_assinatura"`
 	CriadoEm          sql.NullString `json:"criado_em"`
 	AtualizadoEm      sql.NullString `json:"atualizado_em"`
@@ -84,7 +99,7 @@ type HistoricoModel struct {
 func (h *HistoricoModel) PlanoDeAssinaturaReadAll() ([]HistoricoPlanoDeAssinatura, error) {
 	var historico []HistoricoPlanoDeAssinatura
 
-	rows, err := h.DB.Query("SELECT _ROWID, ID, NOME, VALOR_MENSAL, LIMITE, PERIODO_LIMITE, CRIADO_EM, ATUALIZADO_EM, REMOVIDO_EM, VERSAO, BITMASK, _CRIADO_EM FROM HISTORICO_PLANO_DE_ASSINATURA")
+	rows, err := h.DB.Query("SELECT _ROWID, ID, NOME, VALOR_MENSAL, LIMITE_LINKS_MENSAL, LINKS_REDIRECIONAMENTOS_MENSAL, ORDENACAO_ALEATORIA_LINKS, CRIADO_EM, ATUALIZADO_EM, REMOVIDO_EM, VERSAO, BITMASK, _CRIADO_EM FROM HISTORICO_PLANO_DE_ASSINATURA")
 
 	if err != nil {
 		return nil, err
@@ -100,10 +115,52 @@ func (h *HistoricoModel) PlanoDeAssinaturaReadAll() ([]HistoricoPlanoDeAssinatur
 			&registro.Id,
 			&registro.Nome,
 			&registro.ValorMensal,
-			&registro.Limite,
-			&registro.PeriodoLimite,
+			&registro.LimiteLinksMensal,
+			&registro.LimiteRedirecionadoresMensal,
+			&registro.OrdenacaoAleatoriaLinks,
 			&registro.CriadoEm,
 			&registro.AtualizadoEm,
+			&registro.RemovidoEm,
+			&registro.Versao,
+			&registro.Bitmask,
+			&registro.CriadoEm_,
+		); err != nil {
+			return nil, err
+		}
+
+		historico = append(historico, registro)
+	}
+
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+
+	return historico, nil
+}
+
+func (h *HistoricoModel) UsuarioTemporarioReadAll() ([]HistoricoUsuarioTemporario, error) {
+	var historico []HistoricoUsuarioTemporario
+
+	rows, err := h.DB.Query("SELECT _ROWID, ID, CPF, NOME, NOME_DE_USUARIO, EMAIL, PLANO_DE_ASSINATURA, CRIADO_EM, REMOVIDO_EM, VERSAO, BITMASK, _CRIADO_EM FROM HISTORICO_USUARIO_TEMPORARIO")
+
+	if err != nil {
+		return nil, err
+	}
+
+	defer rows.Close()
+
+	for rows.Next() {
+		var registro HistoricoUsuarioTemporario
+
+		if err := rows.Scan(
+			&registro.RowId,
+			&registro.Id,
+			&registro.Cpf,
+			&registro.Nome,
+			&registro.NomeDeUsuario,
+			&registro.Email,
+			&registro.PlanoDeAssinatura,
+			&registro.CriadoEm,
 			&registro.RemovidoEm,
 			&registro.Versao,
 			&registro.Bitmask,
@@ -125,7 +182,7 @@ func (h *HistoricoModel) PlanoDeAssinaturaReadAll() ([]HistoricoPlanoDeAssinatur
 func (h *HistoricoModel) UsuarioReadAll() ([]HistoricoUsuario, error) {
 	var historico []HistoricoUsuario
 
-	rows, err := h.DB.Query("SELECT _ROWID, ID, CPF, NOME, NOME_DE_USUARIO, EMAIL, SENHA, DATA_DE_NASCIMENTO, AUTENTICADO, PLANO_DE_ASSINATURA, CRIADO_EM, ATUALIZADO_EM, REMOVIDO_EM, VERSAO, BITMASK, _CRIADO_EM FROM HISTORICO_USUARIO")
+	rows, err := h.DB.Query("SELECT _ROWID, ID, CPF, NOME, NOME_DE_USUARIO, EMAIL, SENHA, DATA_DE_NASCIMENTO, PLANO_DE_ASSINATURA, CRIADO_EM, ATUALIZADO_EM, REMOVIDO_EM, VERSAO, BITMASK, _CRIADO_EM FROM HISTORICO_USUARIO")
 
 	if err != nil {
 		return nil, err
@@ -145,7 +202,6 @@ func (h *HistoricoModel) UsuarioReadAll() ([]HistoricoUsuario, error) {
 			&registro.Email,
 			&registro.Senha,
 			&registro.DataDeNascimento,
-			&registro.Autenticado,
 			&registro.PlanoDeAssinatura,
 			&registro.CriadoEm,
 			&registro.AtualizadoEm,
